<resources>
    <string name="app_name">bady</string>
    <string name="find">发现</string>
    <string name="community">圈子</string>
    <string name="school">校园</string>
    <string name="message">消息</string>
    <string name="mine">我的</string>
    <string name="login_name">请输入手机号</string>
    <string name="login_pwd">请输入密码</string>
    <string name="register_phone">手机号</string>
    <string name="register_identifying">验证码</string>
</resources>
